--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meus projetos para o ano</title>
+    <title>Meus projetos para o ano</title> 
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
  <section class="Conteudo-Principal"> 
