--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
  <section class="Conteudo-Principal"> 
-     <h2 class="Titulo-Principal">Meus Objetivos do ano</h2>
+     <h2 class="Titulo-Principal">Meus Objetivos do ano <span> _ </span></h2>
      <div class="botoes">
          <button class="botao">Criar Cursos</button>
          <button class="botao">Criar Projetos em Javascript</button>
