--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
          <button class="botao">Criar um Portifolio</button>
          <button class="botao">Atualizar meu curriculo</button>
      </div>
- </section>   
+ </section>
+
+ <script src="main.js"></script>   
 </body>
 </html>
