--- a/index.html
+++ b/index.html
@@ -16,6 +16,28 @@
          <button class="botao">Criar um Portifolio</button>
          <button class="botao">Atualizar meu curriculo</button>
      </div>
+     <div class="abas-textos">
+     </div>  class="aba-conteudo">
+     <h3 class="aba-conteudo-titulo-principal"> Estuda 4 cursos de Javascript></h3>
+    <h4 class="aba-conteudo-titulo-secundario"> TEMPO ATÉ CONCLUIR O OBJETIVO</h4>
+       </div>
+       <div class="abas-conteudo">
+    </div>  class="aba-conteudo">
+    <h3 class="aba-conteudo-titulo-principal"> Estuda 4 cursos de Javascript</h3>
+   <h4 class="aba-conteudo-titulo-secundario"> TEMPO ATÉ CONCLUIR O OBJETIVO</h4>
+   <div>
+    <div class="abas-conteudo">
+    </div>  class="aba-conteudo">
+    <h3 class="aba-conteudo-titulo-principal"> Estuda 4 cursos de Javascript</h3>
+   <h4 class="aba-conteudo-titulo-secundario"> TEMPO ATÉ CONCLUIR O OBJETIVO</h4>
+   <div>
+    <div class="abas-conteudo">
+    </div>  class="aba-conteudo">
+    <h3 class="aba-conteudo-titulo-principal"> Estuda 4 cursos de Javascript</h3>
+   <h4 class="aba-conteudo-titulo-secundario"> TEMPO ATÉ CONCLUIR O OBJETIVO</h4>
+   </div>
+
+   </div>
  </section>
 
  <script src="main.js"></script>   
